--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -5,5 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="MathNet.NUmerics" Version="5.0.0" />
+  </ItemGroup>
 </Project>
