--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Combinatorics" Version="2.0.0" />
     <PackageReference Include="MathNet.NUmerics" Version="5.0.0" />
   </ItemGroup>
 </Project>
