--- a/PSSN.Web/package.json
+++ b/PSSN.Web/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
     "jscharting": "^3.3.1",
+    "jscharting-react": "^1.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
